--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@highcharts/react": "^4.1.0",
     "@tanstack/react-query": "^5.90.10",
+    "highcharts": "^12.4.0",
+    "install": "^0.13.0",
+    "npm": "^11.6.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6"
